# nvfp4-lora-spark

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REPRODUCE.md  REPRODUCE_SPIDER.md  pyproject.toml  requirements.txt
docs/: BENCHMARKS.md  COMMANDS.md  CONTEXT_FIT_MATRIX.md  GLM45_AIR_FINETUNING.md  LESSONS.md  LICENSES.md  LONG_CONTEXT_EXPERIMENTS.md  PERFORMANCE_ROADMAP.md  PHASE2.md  PORTING.md  README.md  RELEASE_CHECKLIST.md  SERVING.md  SUPPORTED_TOPOLOGIES.md  TROUBLESHOOTING.md  WORKED_EXAMPLE.md  cross_arch_status.md  family_config.example.json
nvfp4_lora/: __init__.py  adapter_keys.py  chat_encode.py  dequant.py  experts.py  families.py  gb10_prep.py  linear.py  loader.py  loss.py  mistral_tok.py  mm_data.py  quantize.py  training_utils.py  triton_dequant.py
nybbloris/: __init__.py  cli.py  manifest.py  plan.py
plots/: extract_train_metrics.py  make_capability_charts.py  make_plots.py  train_metrics.json
scripts/: check_contamination.py  check_lora_binding.py  convert_mistral_consolidated_to_hf.py  data_check.py  dequant_consistency_check.py  distinguish_ft.py  eager_lora_serve_probe.py  eval_gsm8k.py  eval_ppl_mistral_nvfp4.py  eval_retention.py  eval_vision_retention.py  export_llm_lora.py  fix_nvfp4_lm_head.py  gen_bigcodebench.py  gen_humaneval.py  inspect_nvfp4_checkpoint.py  lora_delta_magnitude.py  make_trust_pack.sh  merge_lora_into_ct_nvfp4.py  merge_lora_into_nvfp4.py  merge_vision_lora.py  nybbloris_inspect.py  parity_merged_vs_reference.py  prep_code_sft.py  prep_spider.py  prepare_vision_dataset.py  quantize_mistral_to_nvfp4.py  rekey_expert_lora_for_vllm.py  rekey_lora_for_vllm.py  repro_spider.sh  serve_apply_check.py  serve_parity_vllm.py  split_both_adapter.py  spotcheck_gsm8k.py  train_nvfp4_lora.py  train_watchdog.sh  validate_merge.py  validate_routed_dequant.py
serve/: README.md  local_env.example.sh  run_glm45_air_nvfp4_dynamic_lora.sh  run_glm45_air_nvfp4_expert_lora.sh  run_mistral24b_nvfp4_lora.sh  run_mistral24b_nvfp4_lora_docker.sh  run_mistral24b_vision_merged.sh  run_mistral_small4_nvfp4.sh  run_mistral_small4_rh_lora.sh  run_nano_bf16.sh  run_nemotron_omni_vision_merged.sh  run_qwen35_122b_nvfp4.sh  run_qwen35_122b_nvfp4_dynamic_lora_docker.sh  run_qwen35_122b_rh_ct_dynamic_lora.sh  run_qwen35_122b_rh_ct_lora.sh  run_qwen36_35b_a3b_nvfp4_dynamic_lora_docker.sh  run_super_base_inference.sh  run_super_base_inference_cutlass.sh  run_super_ft_merged.sh  serve_mistral_rh_nvfp4_lora_openai.py  serve_nemotron_nvfp4.sh
smoke_tests/: dequant_correctness.py  linear_smoke.py  loader_smoke.py  qwen3_5_mem_probe.py  test_ct_nvfp4_decode_phase0_1.py  test_custom_quant_roundtrip.py  test_dequant_workspace_pre_m1b.py  test_experts3d_grouped_parity.py  test_loss_parity_pre_m1a.py  test_nvfp4_experts3d_phase0_6.py  test_phase0_5_mistral_full_load.py  test_phase0_5_mistral_redhatai_full_load.py  test_phase0_5_qwen35_full_load.py  test_prefix_translator_phase0_2.py  triton_dequant_parity.py
tests/: README.md  conftest.py  test_adapter_keys.py  test_adapter_save_shape.py  test_bf16_lora_linear.py  test_chat_encode.py  test_cli.py  test_contamination.py  test_data_check.py  test_inspector.py  (+31 more)
(+78 files in other folders)
