[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nybbloris"
version = "1.3.0"
description = "LoRA fine-tuning and runtime-LoRA serving for NVFP4 MoE models on consumer NVIDIA Blackwell (DGX Spark / GB10)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
# Floors only. requirements.txt remains the exact, measurement-validated pin
# set for reproduction runs on GB10 (see REPRODUCE.md); install that for real
# training. These floors are what the library code itself needs.
dependencies = [
    "torch>=2.11",
    "transformers>=5.8",
    "accelerate>=1.13",
    "safetensors>=0.7",
    "peft>=0.19",
    "psutil>=5.9",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
nybbloris = "nybbloris.cli:main"

[project.urls]
Repository = "https://github.com/NvMayMay/nybbloris"

[tool.setuptools]
packages = ["nvfp4_lora", "nybbloris"]

[tool.pytest.ini_options]
testpaths = ["tests"]
