[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nybbloris"
version = "1.6.0"
description = "LoRA fine-tuning and runtime-LoRA serving for NVFP4 MoE models on consumer NVIDIA Blackwell (DGX Spark / GB10)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
# Floors only. requirements.txt remains the exact, measurement-validated pin
# set for reproduction runs on GB10 (see REPRODUCE.md); install that for real
# training. These floors are what the library code itself needs.
dependencies = [
    "torch>=2.11",
    "transformers>=5.8",
    "accelerate>=1.13",
    "safetensors>=0.7",
    "peft>=0.19",
    "psutil>=5.9",
]

[project.optional-dependencies]
test = ["pytest>=8"]
# Public reproduction (REPRODUCE_SPIDER.md): scripts/prep_spider.py pulls Spider via HF datasets.
repro = ["datasets>=2.14"]

[project.scripts]
nybbloris = "nybbloris.cli:main"

[project.urls]
Repository = "https://github.com/NvMayMay/nybbloris"

[tool.setuptools]
# The blessed install is `pip install -e .` from a clone. The `nybbloris`
# console command's serve/train/data-check/contamination subcommands shell out
# to repo-relative scripts/ files (train_nvfp4_lora.py, fix_nvfp4_lm_head.py,
# rekey_*_for_vllm.py, serve_apply_check.py, serve_parity_vllm.py, data_check.py,
# check_contamination.py). The CLI resolves those via REPO_ROOT =
# Path(nybbloris/cli.py).parent.parent, which is the checkout root for an
# editable install -- so the scripts are on disk and the subcommands work.
# `inspect` and `doctor` are pure-library and work from a plain wheel too; the
# script-backed subcommands need the source checkout (they print a clear
# "<script> not found at <path>" and exit 1 rather than crashing if run from a
# bare wheel). We package the two importable libraries; scripts/ is intentionally
# distributed via the git clone, not vendored as package data.
packages = ["nvfp4_lora", "nybbloris"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external model fixtures or services",
]
